# blackwell-ops

./: .gitignore  AGENTS.md  ALL-LLAMA-PARAMS.toml  CATALOG-HF-UPDATES.md  Engines.md  FIT_CALIBRATION_FUTURE.md  FOUNDRY_BUILD_SYSTEM_REVIEW_AND_STABILIZATION_PLAN.md  FOUNDRY_DIRECTORY_STRUCTURE_MAP.md  FOUNDRY_STATE_ARCHITECTURE.md  FUSION-metrics.md  GIT_push.bat  Gemini readme.md  IK-LLAMA-PARAM-DUMP.txt  INTEL-FOUNDRY-BUILD.md  LLAMA-WEBUI-REALTIME-METRICS.md  MANIFEST.md  MERGE_OVERHAUL_PLAN.md  MODEL-METADATA.MD  Majestic.bat  PATH and WORKFLOW map.MD  PROVIDER CONFIG REFACTOR.md  README.md  SLIDER_AND_MAPPER_REMOVAL.md  STAGE_1_PLAN.md  THIRD_PARTY_NOTICES.md  TODO.md  UNIVERSAL_OUTPUT_RECEIVER.md  UOR_IMPLEMENTATION_PLAN.md  VRAM_SCENARIO_SYSTEM.md  backup.py  dev.bat  illegal instruction  index.html  llama-launch-err.txt  llama-test2-err.txt  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  (+1 more)
src-tauri/: .taurignore  Cargo.toml  build.rs  nsis-speedup.nsh  tauri.conf.dev.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/config/: genesis_template.json
src-tauri/nsis/: installer.nsi
src-tauri/src/: app_lifecycle.rs  archive_util.rs  bench_cancel.rs  bench_pp_burst.rs  bench_prompts.rs  binary_update.rs  burst_bench.rs  config.rs  crash_log.rs  debug_flags.rs  disk_io_pdh.rs  distribution.rs  download_manager.rs  engine.rs  engine_job.rs  engine_perf.rs  engine_port_lock.rs  engine_stack.rs  engine_utils.rs  fit_scanner.rs  foundry_toolchain.rs  foundry_toolchain_download.rs  fusion.rs  fusion_brain.rs  (+34 more)
(+302 files in other folders)
